<resources>
    <string name="app_name">CAMPINITY</string>
    <string name="title_splash">Campinity</string>
    <string name="content_splash">캠핑은 Campinity와 함께!</string>
    <string name="image_splash_sun">image_splash_sun</string>
    <string name="image_splash_mountain">image_splash_mountain</string>
    <string name="image_splash_logo">image_splash_logo</string>
    <string name="image_splash_background">image_splash_background</string>
    <string name="title_permission">Campinity 접근 권한 안내</string>
    <string name="content_permission">campinity에서는 다음 권한을 사용하오니 허용해 주시기 바랍니다.</string>
    <string name="title_permission_camera">카메라 (선택)</string>
    <string name="content_permission_camera">사진 촬영을 위해 허용</string>
    <string name="title_permission_gallery">사진 (선택)</string>
    <string name="content_permission_gallery">사진 등록을 위한 촬영, 이미지 저장을 위해 이용</string>
    <string name="title_permission_location">위치정보 (선택)</string>
    <string name="content_permission_location">현재 위치한 캠핑장 검색을 위해 이용</string>
    <string name="title_permission_notification">알림 (선택)</string>
    <string name="content_permission_notification">이벤트 알림 전송을 위해 이용</string>
    <string name="content_confirm">확인</string>
    <string name="image_permission_camera">image_permission_camera</string>
    <string name="image_permission_gallery">image_permission_gallery</string>
    <string name="image_permission_location">image_permission_location</string>
    <string name="image_permission_notification">image_permission_notification</string>
    <string name="image_onboarding_banner">image_onboarding_banner</string>
    <string name="title_join">회원 정보 입력</string>
    <string name="content_join">Campinity에서 사용할\n고객님의 정보를 입력해주세요!</string>
    <string name="content_hint_join">닉네임을 입력해주세요</string>
    <string name="content_duplicate_check">중복 확인</string>
    <string name="content_btn_confirm">회원 정보 작성 완료</string>
    <string name="content_existing_user">안녕하세요. %s님!\n오랜만에 뵙네요.</string>
    <string name="image_complete_join">image_complete_join</string>
    <string name="content_join_cancle_dialog_1">닉네임만 입력하면\n회원가입은 완료됩니다.</string>
    <string name="content_join_cancle_dialog_2">정말</string>
    <string name="content_join_cancle_dialog_3">취소</string>
    <string name="content_join_cancle_dialog_4">하시겠어요?</string>
    <string name="content_cancel">취소</string>
    <string name="content_join_complete">%s님!\n회원가입이 완료되었습니다.</string>
    <string name="image_arrow_left">image_arrow_left</string>
    <string name="image_profile">image_profile</string>
    <string name="title_search_button">검색</string>
    <string name="content_search_button">캠핑장 정보 검색</string>
    <string name="title_community_button">커뮤니티</string>
    <string name="content_community_button">캠핑장 이웃들과\n소통하기</string>
    <string name="title_home">Campinity</string>
    <string name="image_home_mypage_btn">image_home_mypage_btn</string>
    <string name="image_home_notification_btn">image_home_notification_btn</string>
    <string name="image_home_search">image_home_search</string>
    <string name="image_home_community">image_home_community</string>
    <string name="title_home_collection">나의 컬렉션</string>
    <string name="content_collection_more">더 보기</string>
    <string name="title_home_popular_camping_site">지금 가장 HOT한 캠핑장 Top 5</string>
    <string name="title_home_score_camping_site">평점 좋은 캠핑장 Top 5</string>
    <string name="image_home_collection">image_home_collection</string>
    <string name="image_home_banner">image_home_banner</string>
    <string name="image_location_home_camping_site">image_location_home_camping_site</string>
    <string name="content_home_banner_more">더보기</string>
    <string name="content_home_empty_collection">컬렉션이 존재하지 않습니다.</string>
    <string name="content_home_campsite_location">%s, %s</string>
    <string name="title_review_note">리뷰쪽지</string>
    <string name="content_add_photo">사진 추가하기</string>
    <string name="content_select_marker_location">마커 위치 선택</string>
    <string name="content_write_review_note">작성하기</string>
    <string name="content_review_hint">캠핑장의 특정 사이트에 대한 리뷰를 남겨보세요.</string>
    <string name="image_add_photo">image_add_photo</string>
    <string name="image_close_dialog">image_close_dialog</string>
    <string name="image_curation">image_curation</string>
    <string name="title_help">도움주기</string>
    <string name="content_user_location">내 위치를 알려주세요.</string>
    <string name="content_user_help">도움을 줄 내용을 작성해주세요.</string>
    <string name="content_event_time">이벤트 유지 시간</string>
    <string name="content_event_time_ex">오후 8:00</string>
    <string name="content_until_time">까지</string>
    <string name="content_make_help">생성하기</string>
    <string name="content_user_location_hint">도움을 받을 사람이 보고 찾아올 수 있게\n자세하게 작성해주세요.</string>
    <string name="content_user_help_hint">도움을 주실 수 있는 내용을 작성해주세요!\n간단한 위치 설명도 함께 작성해주세요!</string>
    <string name="content_select_marker">확인</string>
    <string name="content_cancel_marker">취소</string>
    <string name="title_write_question_note">질문을 남겨주세요!</string>
    <string name="content_write_question">확인</string>
    <string name="content_cancel_question">취소</string>
    <string name="title_write_free_note">자유 쪽지</string>
    <string name="image_user_profile">image_user_profile</string>
    <string name="image_review_content">image_review_content</string>
    <string name="content_note_question_answer">질문에 대한 답변을 작성해주세요.</string>
    <string name="content_user_answer">나의 답변</string>
    <string name="content_user_question_input">캠핑장에 질문을 남겨주세요.</string>
    <string name="image_back_to_main">image_back_to_main</string>
    <string name="content_campsite_condition">미 지정</string>
    <string name="image_campsite_condition">image_campsite_condition</string>
    <string name="image_floatingactionbutton_help">image_floatingactionbutton_help</string>
    <string name="image_floatingactionbutton_get_help">image_floatingactionbutton_get_help</string>
    <string name="image_floatingactionbutton_review">image_floatingactionbutton_review</string>
    <string name="image_floatingactionbutton_free">image_floatingactionbutton_free</string>
    <string name="image_floatingactionbutton_main">image_floatingactionbutton_main</string>
    <string name="title_campsite_condition">캠핑장 설정</string>
    <string name="content_select_campsite_condition">검색</string>
    <string name="content_search_campsite">현재 위치로 검색</string>
    <string name="image_aim">image_aim</string>
    <string name="image_search_now_location">image_search_now_location</string>
    <string name="content_search_campsite_name">캠핑장 이름으로 검색</string>
    <string name="content_campsite_help">도움 받기</string>
    <string name="content_campsite_get_help">도움 주기</string>
    <string name="content_campsite_review">리뷰 쪽지</string>
    <string name="content_campsite_free">자유 쪽지</string>
    <string name="image_campsite_title_icon">image_campsite_title_icon</string>
    <string name="note_format">%s 쪽지</string>
    <string name="title_receive_help_note">쪽지가 도착했어요!</string>
    <string name="content_receive_help_note">선착순 한 명이 되면\n발신자의 위치가 다시 전송됩니다</string>
    <string name="content_receive_btn">도움받기</string>
    <string name="la_note_lock">gif_note_lock</string>
    <string name="content_guide_help_note">도움을 받아보세요!</string>
    <string name="image_receive_help_note">image_receive_help_note</string>
    <string name="title_collection">My Collection</string>
    <string name="content_collection">나의 캠핑 기록을 확인해보세요!</string>
    <string name="content_add_collection">컬렉션 추가</string>
    <string name="image_collection_mode">image_collection_mode</string>
    <string name="image_curation_detail">image_curation_detail</string>
    <string name="image_multi_option">image_multi_option</string>
    <string name="image_share">image_share</string>
    <string name="content_share">공유하기</string>
    <string name="content_delete_cancel_dialog">삭제하면 컬렉션을\n 되돌릴 수 없습니다.</string>
    <string name="content_delete_cancel_dialog_2">삭제</string>
    <string name="title_create_collection">컬렉션 생성</string>
    <string name="title_update_collection">컬렉션 수정</string>
    <string name="title_create_collection_date">날짜</string>
    <string name="image_arrow_right">image_arrow_right</string>
    <string name="title_create_collection_location">위치</string>
    <string name="content_edittext_location">캠핑장의 이름을 입력해주세요!</string>
    <string name="title_create_collection_description">내용</string>
    <string name="content_edittext_description">캠핑을 다녀온 소감을 자유롭게 입력해주세요!</string>
    <string name="content_collection_delete">삭제하기</string>
    <string name="content_collection_update">수정하기</string>
    <string name="content_collection_date">%d/%02d/%02d</string>
    <string name="content_collection_file_delete">사진을 삭제하시겠습니까?</string>
    <string name="image_collection_photo">image_collection_photo</string>
    <string name="content_search_by_name">캠핑장 이름으로 검색</string>
    <string name="content_area">지역</string>
    <string name="image_area">지역 필터링 선택 버튼</string>
    <string name="content_filter">필터</string>
    <string name="content_search_in_this_scope">현 지도에서 검색</string>
    <string name="image_show_campsite_as_list">캠핑장 목록을 리스트로 보는 버튼입니다.</string>
    <string name="image_show_campsite_as_map">캠핑장 목록을 지도로 보는 버튼입니다.</string>
    <string name="title_campsite_pet">반려동물 동반 가능</string>
    <string name="image_camping_site">캠핑장 사진입니다.</string>
    <string name="image_campsite_location">캠핑장 위치 정보</string>
    <string name="title_campsite_long_content">캠핑장 소개</string>
    <string name="content_show_more_long_content">더보기</string>
    <string name="title_additional_info">기본정보</string>
    <string name="title_campsite_oper_season">운영 기간</string>
    <string name="title_campsite_how_to_reserve">예약 방법</string>
    <string name="title_campsite_homepage_url">홈페이지</string>
    <string name="title_campsite_amenity">시설 및 레저</string>
    <string name="title_review">리뷰</string>
    <string name="content_write_review">리뷰 작성하기</string>
    <string name="content_campsite_review_score">점</string>
    <string name="image_campsite_score_aver">캠핑장 평균 평점입니다.</string>
    <string name="content_show_list_review">후기 더 보기</string>
    <string name="image_filter">필터링 선택 버튼</string>
    <string name="content_note_count">쪽지</string>
    <string name="image_review_profile">프로필 사진입니다.</string>
    <string name="image_review_star">캠핑장 리뷰 별점 이미지입니다.</string>
    <string name="image_campsite_facility_and_leisure">캠핑장의 시설 및 레저 이미지입니다.</string>
    <string name="content_campsite_not_found">검색 된 캠핑장이 없습니다.</string>
    <string name="title_filter_facility">내부 시설</string>
    <string name="title_filter_amenity">부대 시설</string>
    <string name="title_filter_theme">테마</string>
    <string name="title_filter_pet">반려동물 동반 가능</string>
    <string name="title_filter_season">운영 계절</string>
    <string name="content_average_rate">%.1f</string>
    <string name="content_campsite_brief_area">%s %s</string>
    <string name="img_post_box_back">img_post_box_back</string>
    <string name="img_post_box_color">img_post_box_color</string>
    <string name="content_make_note">새 편지</string>
    <string name="content_note_answer">답변 작성</string>
    <string name="image_book_mark">image_book_mark</string>
    <string name="title_curation">Curation</string>
    <string name="title_select_area">지역 설정</string>
    <string name="content_submit">적용하기</string>
    <string name="content_reset">초기화</string>
    <string name="content_select_all">전체</string>
    <string name="content_campsite_count">(%1$d)</string>
    <string name="content_confirm_edit_profile">회원 정보 수정 완료</string>
    <string name="content_edit_profile">Campinity에서 사용할 정보를\n다시 입력해주세요!</string>
</resources>