<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_permission"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="45dp"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:text="@string/content_permission"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_camera"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_permission_camera"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_camera_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_permission_camera"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/iv_camera"
            app:layout_constraintStart_toEndOf="@id/iv_camera"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_permission_camera"
            android:textSize="12sp"
            android:textColor="@color/zambezi"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_camera_title"
            app:layout_constraintStart_toStartOf="@id/tv_camera_title"/>

        <View
            android:id="@+id/divide1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/iv_camera"/>

        <ImageView
            android:id="@+id/iv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_gallery"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_permission_gallery"
            app:layout_constraintTop_toBottomOf="@id/divide1"
            app:layout_constraintStart_toStartOf="@id/iv_camera"/>

        <TextView
            android:id="@+id/tv_gallery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_permission_gallery"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/iv_gallery"
            app:layout_constraintStart_toEndOf="@id/iv_gallery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_permission_gallery"
            android:textSize="12sp"
            android:textColor="@color/zambezi"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_gallery_title"
            app:layout_constraintStart_toStartOf="@id/tv_gallery_title"/>

        <View
            android:id="@+id/divide2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/iv_gallery" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_location"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_permission_location"
            app:layout_constraintTop_toBottomOf="@id/divide2"
            app:layout_constraintStart_toStartOf="@id/iv_gallery"/>

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_permission_location"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/iv_location"
            app:layout_constraintStart_toEndOf="@id/iv_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_permission_location"
            android:textSize="12sp"
            android:textColor="@color/zambezi"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_location_title"
            app:layout_constraintStart_toStartOf="@id/tv_location_title"/>

        <View
            android:id="@+id/divide3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/iv_location" />

        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_notification"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_permission_notification"
            app:layout_constraintTop_toBottomOf="@id/divide3"
            app:layout_constraintStart_toStartOf="@id/iv_location"/>

        <TextView
            android:id="@+id/tv_notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_permission_notification"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/iv_notification"
            app:layout_constraintStart_toEndOf="@id/iv_notification"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_permission_notification"
            android:textSize="12sp"
            android:textColor="@color/zambezi"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_title"
            app:layout_constraintStart_toStartOf="@id/tv_notification_title"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_rect_bilbao_radius10"
            android:text="@string/content_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>