<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="328dp"
    android:layout_height="536dp"
    android:background="@drawable/bg_rect_white_radius15_dialog">

    <ImageView
        android:id="@+id/iv_cancel_help_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_close_dialog"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_help"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_location"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/content_user_location"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_help_title" />

    <EditText
        android:id="@+id/et_user_location"
        android:layout_width="276dp"
        android:layout_height="132dp"
        android:layout_marginTop="6dp"
        android:autofillHints="no"
        android:background="@drawable/bg_rect_grey_white_radius15_stroke1"
        android:hint="@string/content_user_location_hint"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_location" />

    <TextView
        android:id="@+id/tv_user_help"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/content_user_help"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user_location" />

    <EditText
        android:id="@+id/et_user_help"
        android:layout_width="276dp"
        android:layout_height="132dp"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:background="@drawable/bg_rect_grey_white_radius15_stroke1"
        android:hint="@string/content_user_help_hint"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_help" />

    <TextView
        android:id="@+id/tv_event_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="13dp"
        android:text="@string/content_event_time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user_help" />

    <TextView
        android:id="@+id/tv_event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="4dp"
        android:text="@string/content_event_time_ex"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_event_time_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/content_until_time"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_event_time"
        app:layout_constraintStart_toEndOf="@id/tv_event_time" />


    <TextView
        android:id="@+id/btn_make_note_help"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_rect_bilbao_radius10"
        android:gravity="center"
        android:text="@string/content_make_help"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>